analyzer/err.txt
In file included from /usr/include/x86_64-linux-gnu/c++/4.9/bits/c++allocator.h:33:0,
                 from /usr/include/c++/4.9/bits/allocator.h:46,
                 from /usr/include/c++/4.9/bits/stl_tree.h:62,
                 from /usr/include/c++/4.9/map:60,
                 from ../gdriftlib/src/Simulator.h:3,
                 from src/analyzer.cc:1:
/usr/include/c++/4.9/ext/new_allocator.h: In instantiation of ‘void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = Analyzer; _Args = {boost::property_tree::basic_ptree<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > >&}; _Tp = Analyzer]’:
/usr/include/c++/4.9/bits/alloc_traits.h:527:4:   required from ‘static void std::allocator_traits<std::allocator<_Tp1> >::construct(std::allocator_traits<std::allocator<_Tp1> >::allocator_type&, _Up*, _Args&& ...) [with _Up = Analyzer; _Args = {boost::property_tree::basic_ptree<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > >&}; _Tp = Analyzer; std::allocator_traits<std::allocator<_Tp1> >::allocator_type = std::allocator<Analyzer>]’
/usr/include/c++/4.9/bits/shared_ptr_base.h:516:38:   required from ‘std::_Sp_counted_ptr_inplace<_Tp, _Alloc, _Lp>::_Sp_counted_ptr_inplace(_Alloc, _Args&& ...) [with _Args = {boost::property_tree::basic_ptree<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > >&}; _Tp = Analyzer; _Alloc = std::allocator<Analyzer>; __gnu_cxx::_Lock_policy _Lp = (__gnu_cxx::_Lock_policy)2u]’
/usr/include/c++/4.9/ext/new_allocator.h:120:4:   required from ‘void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = std::_Sp_counted_ptr_inplace<Analyzer, std::allocator<Analyzer>, (__gnu_cxx::_Lock_policy)2u>; _Args = {const std::allocator<Analyzer>, boost::property_tree::basic_ptree<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > >&}; _Tp = std::_Sp_counted_ptr_inplace<Analyzer, std::allocator<Analyzer>, (__gnu_cxx::_Lock_policy)2u>]’
/usr/include/c++/4.9/bits/alloc_traits.h:527:4:   required from ‘static void std::allocator_traits<std::allocator<_Tp1> >::construct(std::allocator_traits<std::allocator<_Tp1> >::allocator_type&, _Up*, _Args&& ...) [with _Up = std::_Sp_counted_ptr_inplace<Analyzer, std::allocator<Analyzer>, (__gnu_cxx::_Lock_policy)2u>; _Args = {const std::allocator<Analyzer>, boost::property_tree::basic_ptree<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > >&}; _Tp = std::_Sp_counted_ptr_inplace<Analyzer, std::allocator<Analyzer>, (__gnu_cxx::_Lock_policy)2u>; std::allocator_traits<std::allocator<_Tp1> >::allocator_type = std::allocator<std::_Sp_counted_ptr_inplace<Analyzer, std::allocator<Analyzer>, (__gnu_cxx::_Lock_policy)2u> >]’
/usr/include/c++/4.9/bits/shared_ptr_base.h:620:37:   required from ‘std::__shared_count<_Lp>::__shared_count(std::_Sp_make_shared_tag, _Tp*, const _Alloc&, _Args&& ...) [with _Tp = Analyzer; _Alloc = std::allocator<Analyzer>; _Args = {boost::property_tree::basic_ptree<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > >&}; __gnu_cxx::_Lock_policy _Lp = (__gnu_cxx::_Lock_policy)2u]’
/usr/include/c++/4.9/bits/shared_ptr_base.h:1090:35:   required from ‘std::__shared_ptr<_Tp, _Lp>::__shared_ptr(std::_Sp_make_shared_tag, const _Alloc&, _Args&& ...) [with _Alloc = std::allocator<Analyzer>; _Args = {boost::property_tree::basic_ptree<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > >&}; _Tp = Analyzer; __gnu_cxx::_Lock_policy _Lp = (__gnu_cxx::_Lock_policy)2u]’
/usr/include/c++/4.9/bits/shared_ptr.h:316:64:   required from ‘std::shared_ptr<_Tp>::shared_ptr(std::_Sp_make_shared_tag, const _Alloc&, _Args&& ...) [with _Alloc = std::allocator<Analyzer>; _Args = {boost::property_tree::basic_ptree<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > >&}; _Tp = Analyzer]’
/usr/include/c++/4.9/bits/shared_ptr.h:594:39:   required from ‘std::shared_ptr<_Tp1> std::allocate_shared(const _Alloc&, _Args&& ...) [with _Tp = Analyzer; _Alloc = std::allocator<Analyzer>; _Args = {boost::property_tree::basic_ptree<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > >&}]’
/usr/include/c++/4.9/bits/shared_ptr.h:610:42:   required from ‘std::shared_ptr<_Tp1> std::make_shared(_Args&& ...) [with _Tp = Analyzer; _Args = {boost::property_tree::basic_ptree<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::less<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > >&}]’
src/analyzer.cc:37:39:   required from here
/usr/include/c++/4.9/ext/new_allocator.h:120:4: error: invalid new-expression of abstract class type ‘Analyzer’
  { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
    ^
In file included from src/analyzer.cc:10:0:
src/Analyzer.h:25:7: note:   because the following virtual functions are pure within ‘Analyzer’:
 class Analyzer:public Node{
       ^
In file included from src/Analyzer.h:20:0,
                 from src/analyzer.cc:10:
src/../../util/Node.h:15:18: note: 	virtual void Node::run(const ptree&)
     virtual void run(const boost::property_tree::ptree &_frequest)=0;
                  ^
make: *** [obj/analyzer.o] Error 1
